14 - UMG Animation, Race & Lap Records

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,14 @@
 GameName=petitcon
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
+EditorStartupMap=/Game/VehicleAdvBP/Maps/LooptyLoopMap.LooptyLoopMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
+GameDefaultMap=/Game/VehicleAdvBP/Maps/LooptyLoopMap.LooptyLoopMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode_C
 GlobalDefaultServerGameMode=None
@@ -135,5 +135,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
